- Fixed a regressing where items inside accordions in cde were getting extra padding

--- a/client/css/master.css
+++ b/client/css/master.css
@@ -135,7 +135,7 @@ div.ui-widget-content > ul {
 }
 
 div.ui-widget-content > ul li {/*TODO...*/
-                               padding-left:30px;
+   /* padding-left:30px;  After the integration with cdf, this stopped making sense */
 }
 
 .multiSelectOptions label {
